syntax = "proto3";

package tensorflow;

message TestDevice {
  string name = 1;
  int64 local_id = 2;
  int64 global_id = 3;
}

message TestDeviceList {
  repeated TestDevice device = 1;
}